--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "backend-template",
     "version": "1.0.0",
     "description": "Backend template for Node.js",
-    "main": "index.js",
+    "main": "app.js",
     "scripts": {
         "build": "npx tsc",
         "start": "node dist/app.js",
