--- a/package.json
+++ b/package.json
@@ -14,13 +14,21 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "axios": "^1.4.0"
+        "axios": "^1.4.0",
+        "bcrypt": "^5.1.0",
+        "jsonwebtoken": "^9.0.0",
+        "mongodb": "^5.3.0",
+        "mongodb-memory-server": "^8.12.2",
+        "mongoose": "^7.1.0",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@jest/globals": "^29.5.0",
+        "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.17",
         "@types/node": "^18.16.3",
         "@types/supertest": "^2.0.12",
+        "@types/uuid": "^9.0.2",
         "concurrently": "^8.0.1",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
