--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@jest/globals": "^29.5.0",
         "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.17",
+        "@types/jsonwebtoken": "^9.0.2",
         "@types/node": "^18.16.3",
         "@types/supertest": "^2.0.12",
         "@types/uuid": "^9.0.2",
